<resources>
    <string name="app_name">SpaceXCodeTest</string>
    <string name="heading_text">SpaceX</string>
    <string name="company_heading">COMPANY</string>
    <string name="mission_label">Mission:</string>
    <string name="date_time_label">Date/Time:</string>
    <string name="days_label">Days:</string>
    <string name="rocket_label">Rocket:</string>
    <string name="since_from_label">Since/From:</string>
    <string name="launches_heading">LAUNCHES</string>
    <string name="spacex">SpaceX</string>
    <string name="filter_image_icon">filter image icon</string>
    <string name="youtube">YouTube</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="article">Article</string>
    <string name="sort_order">Sort Order</string>
    <string name="launch_status">Launch Status</string>
    <string name="launch_year">Launch Year</string>

    <string-array name="years_spinner_array">
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>


    <string-array name="success_spinner_array">
        <item>Successful</item>
        <item>Unsuccessful</item>
    </string-array>

    <string-array name="asc_desc_spinner_array">
        <item>ASC</item>
        <item>DESC</item>
    </string-array>

</resources>