<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/years_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_year"
        app:layout_constraintBottom_toBottomOf="@id/years_spinner"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/launch_success_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_status"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="@id/success_spinner"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/sort_order_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="@id/asc_desc_spinner"
        app:layout_constraintLeft_toLeftOf="parent" />

   <Spinner
       android:id="@+id/years_spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:entries="@array/years_spinner_array"/>

    <Spinner
        android:id="@+id/success_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/years_spinner"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/success_spinner_array"/>

    <Spinner
        android:id="@+id/asc_desc_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/success_spinner"
        app:layout_constraintRight_toRightOf="parent"
        android:entries="@array/asc_desc_spinner_array"/>

</androidx.constraintlayout.widget.ConstraintLayout>