<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/article_icon_imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/article_icon"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article"
        app:layout_constraintTop_toBottomOf="@id/article_icon_imageview"
        app:layout_constraintLeft_toLeftOf="@id/article_icon_imageview"
        app:layout_constraintRight_toRightOf="@id/article_icon_imageview"/>


    <ImageView
        android:id="@+id/wiki_icon_imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/wiki_icon"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/article_icon_imageview"
        app:layout_constraintRight_toLeftOf="@id/youtube_icon_imageview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wikipedia"
        app:layout_constraintTop_toBottomOf="@id/wiki_icon_imageview"
        app:layout_constraintLeft_toLeftOf="@id/wiki_icon_imageview"
        app:layout_constraintRight_toRightOf="@id/wiki_icon_imageview"/>

    <ImageView
        android:id="@+id/youtube_icon_imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/youtube_icon"
        android:layout_marginRight="70dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/youtube"
        app:layout_constraintTop_toBottomOf="@id/youtube_icon_imageview"
        app:layout_constraintLeft_toLeftOf="@id/youtube_icon_imageview"
        app:layout_constraintRight_toRightOf="@id/youtube_icon_imageview"/>

</androidx.constraintlayout.widget.ConstraintLayout>