<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="16dp"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_mission_patch_imageview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/icon_launch_success_imageview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mission_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_label"
            app:layout_constraintTop_toTopOf="@id/icon_mission_patch_imageview"
            app:layout_constraintLeft_toRightOf="@id/icon_mission_patch_imageview"
            android:paddingStart="8dp" />

        <TextView
            android:id="@+id/date_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            app:layout_constraintTop_toBottomOf="@id/mission_label_textview"
            app:layout_constraintLeft_toRightOf="@id/icon_mission_patch_imageview"
            android:paddingStart="8dp"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/rocket_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket_label"
            app:layout_constraintTop_toBottomOf="@id/date_label_textview"
            app:layout_constraintLeft_toRightOf="@id/icon_mission_patch_imageview"
            android:paddingStart="8dp"
            android:paddingTop="4dp" />

        <TextView
            android:id="@+id/days_label_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_label"
            app:layout_constraintTop_toBottomOf="@id/rocket_label_textview"
            app:layout_constraintLeft_toRightOf="@id/icon_mission_patch_imageview"
            android:paddingStart="8dp"
            android:paddingTop="4dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_constraint_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/date_label_textview">

            <TextView
                android:id="@+id/mission_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{mission name}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{date}"
                app:layout_constraintTop_toBottomOf="@id/mission_name_textview"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/at_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" at "
                app:layout_constraintTop_toBottomOf="@id/mission_name_textview"
                app:layout_constraintLeft_toRightOf="@id/date_textview"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{time}"
                app:layout_constraintTop_toBottomOf="@id/mission_name_textview"
                app:layout_constraintLeft_toRightOf="@id/at_textview"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/rocket_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="{name}/{type}"
                app:layout_constraintTop_toBottomOf="@id/date_textview"
                app:layout_constraintLeft_toLeftOf="parent"
                android:paddingTop="4dp" />

            <TextView
                android:id="@+id/days_textview"
                android:layout_width="62dp"
                android:layout_height="23dp"
                android:paddingTop="4dp"
                android:text="+/-{days}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rocket_name_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>